# CodeQuest-backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  db_schema_query.sql  docker-compose.yml  pyproject.toml  requirements.txt
api/: main.py  supabase_client.py
