[project]
name = "codequest-backend"
version = "0.1.0"
description = "python backend for code-quest"
authors = [
    {name = "Gaurav-Krishna-Gaali",email = "gaali.gk19@gmail.com"}
]
readme = "README.md"
requires-python = "3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
