[project]
name = "codequest-backend"
version = "0.1.0"
description = "backend for code-quest"
authors = [
    {name = "gaali.gk19@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.6,<0.116.0)",
    "supabase (>=2.11.0,<3.0.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
